[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railone-pilot-baseline"
version = "0.6.0"
description = "RailOne non-custodial pilot execution baseline"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[tool.setuptools.packages.find]
include = ["railone_*"]
exclude = ["tests*"]
