[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railone-pilot-baseline"
version = "0.7.0"
description = "RailOne non-custodial pilot PostgreSQL runtime baseline"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]

[tool.setuptools.packages.find]
include = ["railone_*"]
exclude = ["tests*"]
