[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railone-pilot-baseline"
version = "0.9.0"
description = "RailOne non-custodial M-PESA Kenya sandbox execution baseline"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3,<4"]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "httpx>=0.28,<1"]
pilot = [
    "psycopg[binary]>=3.3,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
]

[tool.setuptools.packages.find]
include = ["railone_*"]
exclude = ["tests*"]
